--- a/index.html
+++ b/index.html
@@ -228,6 +228,6 @@
             }
         }
     </script>
-
+عند ارسال البيانات سنتواصل معك لاعطائك الكود لدخول مجموعة واتساب مع ارسال الشروحات الخاص بكل مستوى ولكل مادة
 </body>
 </html>
