--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> مسار النجاح </title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,67 +48,49 @@
         button:hover {
             background-color: #388e3c; /* أخضر غامق */
         }
-        .modal {
+        #amount {
+            font-size: 18px;
+            color: #2e7d32;
+            margin-top: 10px;
+            font-weight: bold;
+        }
+        .popup {
             display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 90%;
-            max-width: 400px;
-            background: #ffffff;
+            background-color: #ffffff;
+            border: 2px solid #4caf50;
             padding: 20px;
-            border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             z-index: 1000;
-            border: 2px solid #4caf50; /* أخضر */
         }
-        .modal.show {
-            display: block;
+        .popup-content {
+            color: #2e7d32;
         }
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-        }
-        .overlay.show {
-            display: block;
-        }
-        .whatsapp-buttons {
-            display: none;
-        }
-        .whatsapp-buttons button {
-            width: 45%;
-            margin: 5px 2.5%;
-            background-color: #25D366; /* أخضر واتساب */
+        .popup button {
+            background-color: #4caf50; /* أخضر */
             color: white;
-        }
-        .whatsapp-buttons button:hover {
-            background-color: #1EBE57;
-        }
-        #errorMessage {
-            font-size: 14px;
-            color: red;
-            display: none;
+            cursor: pointer;
+            font-size: 16px;
             margin-top: 10px;
         }
-        #successMessage, #emptyFieldsMessage {
-            font-size: 16px;
-            color: #4caf50;
-            display: none;
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #4caf50;
-            border-radius: 5px;
-            background-color: #e8f5e9;
+        .popup button:hover {
+            background-color: #388e3c; /* أخضر غامق */
         }
-        #errorMessage {
-            color: #e53935;
+        .popup.large {
+            width: 80%;
+            max-width: 600px;
+        }
+        .whatsapp-buttons {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+        }
+        .whatsapp-buttons button {
+            padding: 10px 20px;
+            font-size: 18px;
         }
     </style>
 </head>
@@ -122,7 +104,7 @@
         <input type="text" id="phone" required>
 
         <label>اختيار المادة:</label>
-        <select id="subject" required>
+        <select id="subject" multiple required>
             <option value="الفيزياء">الفيزياء</option>
             <option value="الرياضيات">الرياضيات</option>
         </select>
@@ -136,53 +118,81 @@
         <label>إثبات الدفع:</label>
         <input type="file" id="proof" required>
 
+        <div id="amount">المبلغ: 0 DH</div>
+
         <button type="button" onclick="sendToTelegram()">إرسال البيانات</button>
     </form>
 
-    <button id="whatsappButton">الدخول إلى مجموعة واتساب</button>
+    <button id="whatsappButton" onclick="promptForCode()">الدخول إلى مجموعة واتساب</button>
 
-    <div class="overlay" id="overlay"></div>
+    <div id="whatsappLinks" class="whatsapp-buttons" style="display: none;">
+        <button onclick="window.location.href='https://chat.whatsapp.com/Jypv0oR7C1kCNpYKQHGHN8'">1bac</button>
+        <button onclick="window.location.href='https://chat.whatsapp.com/CiROIYpnCuOLK5Oua6wa2J'">2bac</button>
+    </div>
 
-    <div class="modal" id="modal">
-        <label>  اكتب الاسم الخاص بك  :</label>
-        <input type="text" id="whatsappName" placeholder="مثال: أحمد" required>
-
-        <label>كود القفل:</label>
-        <input type="text" id="lockCode" placeholder="أدخل الكود هنا" required>
-
-        <button type="button" onclick="verifyCode()">تأكيد</button>
-        <p id="errorMessage">الكود خطأ، حاول مرة أخرى.</p>
-
-        <div class="whatsapp-buttons" id="whatsappButtons">
-            <button onclick="window.open('https://chat.whatsapp.com/Jypv0oR7C1kCNpYKQHGHN8', '_blank')">1Bac</button>
-            <button onclick="window.open('https://chat.whatsapp.com/CiROIYpnCuOLK5Oua6wa2J', '_blank')">2Bac</button>
+    <!-- Popup for error -->
+    <div id="errorPopup" class="popup">
+        <div class="popup-content">
+            <p>يرجى تعبئة جميع الحقول المطلوبة.</p>
+            <button onclick="closePopup('errorPopup')">إغلاق</button>
         </div>
     </div>
 
-    <div id="successMessage">تم إرسال البيانات بنجاح!</div>
-    <div id="emptyFieldsMessage">يرجى تعبئة جميع الحقول المطلوبة.</div>
+    <!-- Popup for success -->
+    <div id="successPopup" class="popup">
+        <div class="popup-content">
+            <p>تم إرسال البيانات بنجاح! سيتم إرسال لك الكود لدخول المجوعة الخاصة بك مع الشروحات.</p>
+            <button onclick="closePopup('successPopup')">إغلاق</button>
+        </div>
+    </div>
+
+    <!-- Popup for code entry -->
+    <div id="codePopup" class="popup large">
+        <div class="popup-content">
+            <p>ادخل الكود للوصول إلى مجموعات واتساب:</p>
+            <input type="text" id="authCode" placeholder="ادخل الكود" required>
+            <button onclick="verifyCode()">إرسال</button>
+            <button onclick="closePopup('codePopup')">إغلاق</button>
+        </div>
+    </div>
 
     <script>
         const BOT_TOKEN = "8080174902:AAHX9XK3_Yd-TkY8Vq2LBzK8BGCWFmqy17o";
         const CHAT_ID = "7203065656";
+        const AUTH_CODE = "pika2025"; // الكود الصحيح للدخول لمجموعة واتساب
+
+        function calculateAmount() {
+            const subjects = Array.from(document.getElementById("subject").selectedOptions).map(option => option.value);
+            const level = document.getElementById("level").value;
+
+            let amount = 0;
+            if (subjects.length === 1) {
+                amount = level === "السنة الأولى بكالوريا" ? 150 : 200;
+            } else if (subjects.length === 2) {
+                amount = level === "السنة الأولى بكالوريا" ? 200 : 300;
+            }
+            document.getElementById("amount").textContent = `المبلغ: ${amount} DH`;
+        }
+
+        document.getElementById("subject").addEventListener("change", calculateAmount);
+        document.getElementById("level").addEventListener("change", calculateAmount);
 
         function sendToTelegram() {
             const name = document.getElementById("name").value;
             const phone = document.getElementById("phone").value;
-            const subject = document.getElementById("subject").value;
+            const subjects = Array.from(document.getElementById("subject").selectedOptions).map(option => option.value).join(", ");
             const level = document.getElementById("level").value;
             const proof = document.getElementById("proof").files[0];
+            const amount = document.getElementById("amount").textContent.split(":")[1].trim();
 
-            // تحقق من تعبئة الحقول
-            if (!name || !phone || !subject || !level || !proof) {
-                document.getElementById("emptyFieldsMessage").style.display = "block";
-                document.getElementById("successMessage").style.display = "none";
+            if (!name || !phone || !subjects || !level || !proof) {
+                showPopup('errorPopup');
                 return;
             }
 
             const formData = new FormData();
             formData.append("chat_id", CHAT_ID);
-            formData.append("caption", `الاسم: ${name}\nرقم الهاتف: ${phone}\nالمادة: ${subject}\nالمستوى: ${level}`);
+            formData.append("caption", `الاسم: ${name}\nرقم الهاتف: ${phone}\nالمادة: ${subjects}\nالمستوى: ${level}\n${amount}`);
             formData.append("document", proof);
 
             fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendDocument`, {
@@ -192,42 +202,34 @@
             .then(response => response.json())
             .then(data => {
                 if (data.ok) {
-                    document.getElementById("successMessage").style.display = "block";
-                    document.getElementById("emptyFieldsMessage").style.display = "none";
+                    showPopup('successPopup');
                 } else {
-                    alert("حدث خطأ أثناء الإرسال.");
+                    showPopup('errorPopup');
                 }
             });
         }
 
-        const whatsappButton = document.getElementById("whatsappButton");
-        const modal = document.getElementById("modal");
-        const overlay = document.getElementById("overlay");
-        const whatsappButtons = document.getElementById("whatsappButtons");
-        const errorMessage = document.getElementById("errorMessage");
-
-        whatsappButton.addEventListener("click", () => {
-            modal.classList.add("show");
-            overlay.classList.add("show");
-        });
-
-        overlay.addEventListener("click", () => {
-            modal.classList.remove("show");
-            overlay.classList.remove("show");
-        });
+        function promptForCode() {
+            showPopup('codePopup');
+        }
 
         function verifyCode() {
-            const lockCode = document.getElementById("lockCode").value;
-
-            if (lockCode === "pika.pika.2025") {
-                errorMessage.style.display = "none";
-                whatsappButtons.style.display = "flex";
+            const enteredCode = document.getElementById("authCode").value;
+            if (enteredCode === AUTH_CODE) {
+                document.getElementById("whatsappLinks").style.display = "flex"; // جعل الأزرار تظهر بجانب بعضها
+                closePopup('codePopup');
             } else {
-                errorMessage.style.display = "block";
-                whatsappButtons.style.display = "none";
+                alert("كود غير صحيح.");
             }
         }
-    </script>
-عند ارسال البيانات سنتواصل معك لاعطائك الكود لدخول مجموعة واتساب مع ارسال الشروحات الخاص بكل مستوى ولكل مادة
-</body>
+
+        function showPopup(id) {
+            document.getElementById(id).style.display = "block";
+        }
+
+        function closePopup(id) {
+                    document.getElementById(id).style.display = "none";
+                }
+            </script>
+        </body>
 </html>
