--- a/index.html
+++ b/index.html
@@ -231,5 +231,6 @@
                     document.getElementById(id).style.display = "none";
                 }
             </script>
+    hrafi3141@gmail.com     لدعم والاستفسار عن اية مشاكال
         </body>
 </html>
