--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    لدخول الى مجموعة الواتساب انزل  لاسفل الصفحة
+     اذا لم يظهر لك زر الدخول لمجموعة الواتساب قم بنزول لاسفل الصفحة
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
